Still trying to fix footer bleed over

--- a/static/admin/console/admin-console.css
+++ b/static/admin/console/admin-console.css
@@ -14,7 +14,7 @@
 
 /* ✅ Console Page Header */
 .admin-console-header {
-  font-size: 26px;
+  font-size: 32px;
   font-weight: bold;
   text-align: left;
   padding: 0 10px 12px 10px;
